Fix iPhone alignment in solutions section

--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -253,10 +253,10 @@ section {
   background-size:cover;
   position:absolute;
 
-  width:80vw;
-  height:80vh;
+  width:90vw;
+  height:90vh;
   bottom:11em;
-  right:0;
+  left:20vw;
 }
 
 #solutions {
